--- a/Black Sea Armoury/Language/SimplifiedChinese.xml
+++ b/Black Sea Armoury/Language/SimplifiedChinese.xml
@@ -151,6 +151,8 @@
   <entitydescription.mph_ammo_exp>爆炸就是艺术</entitydescription.mph_ammo_exp>
   <entityname.mph_ammo_exp_vt>4 英寸 "暴雷"榴弹(VT)</entityname.mph_ammo_exp_vt>
   <entitydescription.mph_ammo_exp_vt>爆炸就是艺术，使用近炸引信在目标附近引爆并产生金属风暴，对除发射者外的一切目标进行切割。</entitydescription.mph_ammo_exp_vt>
+  <entityname.mph_ammo_breaching>4 英寸 "公牛"榴弹</entityname.mph_ammo_breaching>
+  <entitydescription.mph_ammo_breaching>FBI BREACHING!!!</entitydescription.mph_ammo_breaching>
   <entityname.mph_ammo_base>4 英寸 榴弹</entityname.mph_ammo_base>
   <entitydescription.mph_ammo_base>未填装战斗部，但被这玩意捅到怎么想都很糟糕吧。</entitydescription.mph_ammo_base>
   <entityname.mph_ammo_heathesh>4 英寸 串联破甲碎甲榴弹</entityname.mph_ammo_heathesh>
@@ -422,23 +424,25 @@
   <entitydescription.clownexosuitbw_e>Why so serious?</entitydescription.clownexosuitbw_e>
   <!--Enemy Characters-->
   <!--Pirate-->
-  <character.Pirateantisub>雷霆</character.Pirateantisub><!--轨道炮高爆/破片/EMP | 二海后-->
-  <character.Pirateboarder>风暴</character.Pirateboarder><!--CQB/LMG/556 | 二海-->
-  <character.Piratebombard>屠夫</character.Piratebombard><!--伐木炮 | 四海后-->
-  <character.Piratedesolator>污钢</character.Piratedesolator><!--轨道炮脏弹 | 二海深渊/三海后-->
-  <character.Piratedismantler>碾灭者</character.Piratedismantler><!--大锤 | 二海-->
-  <character.Piratedismantlerpod>粉碎小组跳帮舱</character.Piratedismantlerpod><!--大锤+小锤跳帮 | 二海-->
-  <character.Pirateenforcer>强袭者</character.Pirateenforcer><!--弹鼓喷/-4/-15 | 二海-->
-  <character.Pirateenforcerpod>强袭跳帮舱</character.Pirateenforcerpod><!--单人跳帮 | 二海-->
-  <character.Pirateforerunner>粉碎者</character.Pirateforerunner><!--小锤 | 一海-->
-  <character.Pirategrenadier>雷暴</character.Pirategrenadier><!--弹鼓榴弹 | 二海-->
-  <character.Pirategunner>突袭者</character.Pirategunner><!--镰刀/-338/-8/-8s | 三海后-->
+  <character.Pirateantisub>雷霆</character.Pirateantisub><!--轨道炮高爆/破片/EMP-->
+  <character.Pirateboarder>风暴</character.Pirateboarder><!--CQB/LMG/556-->
+  <character.Piratebombard>屠夫</character.Piratebombard><!--伐木炮-->
+  <character.Piratecommando>旋风</character.Piratecommando><!--AG,556,65-->
+  <character.Piratedesolator>污钢</character.Piratedesolator><!--轨道炮脏弹-->
+  <character.Piratedismantler>碾灭者</character.Piratedismantler><!--大锤-->
+  <character.Piratedismantlerpod>粉碎小组跳帮舱</character.Piratedismantlerpod><!--大锤+小锤跳帮-->
+  <character.Pirateenforcer>强袭者</character.Pirateenforcer><!--弹鼓喷/-4/-15-->
+  <character.Pirateenforcerpod>强袭跳帮舱</character.Pirateenforcerpod><!--单人跳帮-->
+  <character.Pirateforerunner>粉碎者</character.Pirateforerunner><!--小锤-->
+  <character.Pirategrenadier>雷暴</character.Pirategrenadier><!--弹鼓榴弹-->
+  <character.Pirategunner>突袭者</character.Pirategunner><!--镰刀/-338/-8-->
   <character.Pirategunnerpod>突袭小组跳帮舱</character.Pirategunnerpod><!--Pirategunner+Piratescavenger-->
   <character.Pirateheavy>钢炉</character.Pirateheavy><!--盾+手炮/LMG-->
   <character.Pirateheavypod>液压机跳帮舱</character.Pirateheavypod><!--单人跳帮-->
-  <character.Piratemarksman>告密者</character.Piratemarksman><!--步枪-->
+  <character.Piratemarksman>告密者</character.Piratemarksman><!--步枪/-8s-->
   <character.Piratenuker>熔毁</character.Piratenuker><!--小核弹-->
-  <character.Piraterifleman>征讨者</character.Piraterifleman><!--突击步枪-->
+  <character.Piraterifleman>征讨者</character.Piraterifleman><!--突击步枪/65-->
+  <character.Pirateriflemanpod>征讨者</character.Pirateriflemanpod><!--Piraterifleman+Piratecommando-->
   <character.Piratescavenger>清道夫</character.Piratescavenger><!--榴弹发射器/LMG+奇奇怪怪的近战武器-->
   <character.Piratescavengerpod>清道夫跳帮舱</character.Piratescavengerpod><!--单人跳帮 | 二海-->
   <character.Piratesharpshooter>收割者</character.Piratesharpshooter><!--精确步枪/408不同弹种随机-->
