--- a/Black Sea Armoury/Language/SimplifiedChinese.xml
+++ b/Black Sea Armoury/Language/SimplifiedChinese.xml
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <infotexts language="Simplified Chinese" nowhitespace="false" translatedname="中文(简体)">
+  <!--tips-->
+  <loadingscreentip>"火药也是药" - 庸医安迪</loadingscreentip>
+  <loadingscreentip>精确射手步枪通常可以切换至半自动模式以获得更好的精度</loadingscreentip>
+  <loadingscreentip>武器穿甲性能通常取决于枪管长度，子弹类型</loadingscreentip>
+  <loadingscreentip>穿甲性能在对付装甲敌人时十分重要</loadingscreentip>
+  <loadingscreentip>散步在快速射击时会快速扩大</loadingscreentip>
   <!--Job.xml-->
   <jobName.Pilot>铁骑兵</jobName.Pilot>
   <jobdescription.Pilot>铁骑兵，钢铁联盟的的精锐，是欧罗巴上人类的坚定的捍卫者。</jobdescription.Pilot>
@@ -61,6 +67,7 @@
   <talentname.logistic_system>辅助核心</talentname.logistic_system><!--Logistics Core-->
   <talentname.revengesquad_offense>绝命冲锋</talentname.revengesquad_offense><!--Desperate Assault-->
   <talentname.revengesquad_deffense>救赎之盾</talentname.revengesquad_deffense><!--Redemption Shield-->
+	<talentname.revengesquad_logistic>绝境响应</talentname.revengesquad_logistic><!--Dire Response-->
   <talentname.warlordbw_offense>深渊王牌</talentname.warlordbw_offense><!--Ace-->
   <talentname.warlordbw_deffense>装甲堡垒</talentname.warlordbw_deffense><!--Armor Citadel-->
   <talentname.miracleworker_bw>联队指挥学</talentname.miracleworker_bw><!--Leadership-->
@@ -73,6 +80,7 @@
   <talentdescription.miracleworker_bw>驾驶机甲时，给自身和友军提供[value]%增强。</talentdescription.miracleworker_bw>
   <talentdescription.revengesquad_offense>友军濒死时，你获得[amount]%的‖color:gui.orange‖伤害加成‖end‖，该友军死亡或者恢复后持续[duration]秒，效果随时间减少。</talentdescription.revengesquad_offense>
   <talentdescription.revengesquad_deffense>友军濒死时，你获得[amount]%的‖color:gui.orange‖物理伤害抗性‖end‖，该友军死亡或者恢复后持续持续[duration]秒，效果随时间减少。</talentdescription.revengesquad_deffense>
+	<talentdescription.revengesquad_logistic>友军濒死时，你获得[amount]%的‖color:gui.orange‖维修速度‖end‖和[amount2]%的‖color:gui.orange‖移动速度和医疗物资效果提高‖end‖的效果，该友军死亡或者恢复后持续持续[duration]秒，效果随时间减少。</talentdescription.revengesquad_logistic>
   <talentdescription.warlordbw_offense>每当你完成一项任务，你增加[smallgain]%最大伤害。若所有船员都幸存，则再增加[largegain]%的最大伤害，上限为[maxgain]%。</talentdescription.warlordbw_offense>
   <talentdescription.warlordbw_deffense>每当你完成一项任务，你增加[smallgain]%最大生命。若所有船员都幸存，则再增加[largegain]%的最大生命，上限为[maxgain]%。</talentdescription.warlordbw_deffense>
   <Afflictionname.commnetbw>指挥网络</Afflictionname.commnetbw>
@@ -80,51 +88,71 @@
   <stattypenames.flowresistance>水流抗性</stattypenames.flowresistance>
   <Afflictionname.revengesquad_offense>复仇之愿</Afflictionname.revengesquad_offense>
   <Afflictionname.revengesquad_deffense>守护之愿</Afflictionname.revengesquad_deffense>
+	<Afflictionname.revengesquad_logistic>维护之愿</Afflictionname.revengesquad_logistic>
   <Afflictiondescription.revengesquad_offense>拯救一个生命的唯一途径就是夺取另一个生命</Afflictiondescription.revengesquad_offense>
   <Afflictiondescription.revengesquad_deffense>拯救一个生命的唯一途径就是承受一切痛苦</Afflictiondescription.revengesquad_deffense>
+	<Afflictiondescription.revengesquad_logistic>拯救一个生命的唯一途径就是守护最后的希望</Afflictiondescription.revengesquad_logistic>
   <talentname.apolloassistsystem_bw>阿波罗辅助系统</talentname.apolloassistsystem_bw>
-  <talentdescription.apolloassistsystem_bw>驾驶阿波罗时，造成额外100%化学烧伤，并且治疗伤员后，使得伤员60秒内获得阿波罗纳米机器人的辅助。</talentdescription.apolloassistsystem_bw>
+  <talentdescription.apolloassistsystem_bw>驾驶阿波罗时，造成额外25%化学烧伤，并且治疗伤员后，使得伤员60秒内获得阿波罗纳米机器人的辅助。</talentdescription.apolloassistsystem_bw>
+	<talentname.circeassistsystem_bw>喀耳刻辅助系统</talentname.circeassistsystem_bw>
+	<talentdescription.circeassistsystem_bw>驾驶喀耳刻时，造成额外100%化学烧伤和烧伤，并向攻击目标注入喀耳刻纳米机器人（酸性脆弱）。</talentdescription.circeassistsystem_bw>
   <!--AR.xml-->
+  <label.semiautomatic>半自动模式</label.semiautomatic>
+  <label.lighting>照明系统</label.lighting>
   <entityname.spar-408>SPAR-408 特种精确射手步枪</entityname.spar-408>
   <entitydescription.spar-408>钢铁联盟设计的一款精确射手步枪，用歼灭高威胁目标。</entitydescription.spar-408>
-  <entityname.spar_7magazine>SPAR-408 克拉肯穿甲弹匣(7)</entityname.spar_7magazine>
-  <entitydescription.spar_7magazine>7发 .408 步枪弹匣，所使用穿甲弹，足以击穿绝大部分生物的装甲。</entitydescription.spar_7magazine>
-  <entityname.spar_7magazine_fmj>SPAR-408 鲲全金属被甲弹匣(7)</entityname.spar_7magazine_fmj>
-  <entitydescription.spar_7magazine_fmj>7发 .408 步枪弹匣，所使用全金属被甲弹，能够在目标体内造成大量伤害。</entitydescription.spar_7magazine_fmj>
-  <entityname.spar_7magazine_jhp>SPAR-408 斯库拉全金属被甲空心弹弹匣(7)</entityname.spar_7magazine_jhp>
-  <entitydescription.spar_7magazine_jhp>7发 .408 步枪弹匣，所使用全金属被甲空心弹，能够在目标体内造成巨额伤害和巨大的停止作用。</entitydescription.spar_7magazine_jhp>
+  <entityname.408_7magazine_bw>SPAR-408 克拉肯穿甲弹匣(7)</entityname.408_7magazine_bw>
+  <entitydescription.408_7magazine_bw>7发 .408 步枪弹匣，所使用穿甲弹，足以击穿绝大部分生物的装甲。</entitydescription.408_7magazine_bw>
+  <entityname.408fmj_7magazine_bw>SPAR-408 鲲全金属被甲弹匣(7)</entityname.408fmj_7magazine_bw>
+  <entitydescription.408fmj_7magazine_bw>7发 .408 步枪弹匣，所使用全金属被甲弹，能够在目标体内造成大量伤害。</entitydescription.408fmj_7magazine_bw>
+  <entityname.408jhp_7magazine_bw>SPAR-408 斯库拉全金属被甲空心弹弹匣(7)</entityname.408jhp_7magazine_bw>
+  <entitydescription.408jhp_7magazine_bw>7发 .408 步枪弹匣，所使用全金属被甲空心弹，能够在目标体内造成巨额伤害和巨大的停止作用。</entitydescription.408jhp_7magazine_bw>
   <entityname.spar-338>SPAR-338 特种机枪</entityname.spar-338>
   <entitydescription.spar-338>钢铁联盟设计的一款精确而致命的机枪，用于抵御怪物日益增加的危险。</entitydescription.spar-338>
-  <entityname.spar_24magazine>SPAR-338弹匣(24)</entityname.spar_24magazine>
-  <entitydescription.spar_24magazine>24发钛合金 .338 拉普麦格农机枪弹匣。</entitydescription.spar_24magazine>
-  <entityname.spar_60magazine>SPAR-338弹匣(60)</entityname.spar_60magazine>
-  <entitydescription.spar_60magazine>60发钛合金 .338 拉普麦格农加长型机枪弹匣，用于提供火力压制。</entitydescription.spar_60magazine>
+  <entityname.338_24magazine_bw>SPAR-338弹匣(24)</entityname.338_24magazine_bw>
+  <entitydescription.338_24magazine_bw>24发钛合金 .338 拉普麦格农机枪弹匣。</entitydescription.338_24magazine_bw>
+  <entityname.338_60magazine_bw>SPAR-338弹匣(60)</entityname.338_60magazine_bw>
+  <entitydescription.338_60magazine_bw>60发钛合金 .338 拉普麦格农加长型机枪弹匣，用于提供火力压制。</entitydescription.338_60magazine_bw>
+  <entityname.spar-93>SPAR-93 特种突击步枪</entityname.spar-93>
+  <entitydescription.spar-93>基于SPAR-76在市场上的显著成就，钢铁联盟推出了一款新型重型突击步枪。这款步枪以其坚固的构造和高效的作战能力为特色，能够通过几发高威力子弹迅速制服敌人。</entitydescription.spar-93>
+  <entityname.93_30magazine_bw>SPAR-93弹匣(30)</entityname.93_30magazine_bw>
+  <entitydescription.93_30magazine_bw>30发 9.3×63mm 步枪弹匣，每一发都如同重锤一般。</entitydescription.93_30magazine_bw>
   <entityname.spar-8s>SPAR-8S 特种精确射手步枪</entityname.spar-8s>
   <entitydescription.spar-8s>钢铁联盟设计的一款全自动小队精确射手步枪，延长了枪管并使用改进型制退器显著的提高了精度和穿甲能力。</entitydescription.spar-8s>
   <entityname.spar-8>SPAR-8 特种精确射手步枪</entityname.spar-8>
   <entitydescription.spar-8>钢铁联盟设计的一款全自动精确射手步枪，深受精锐部队的喜爱。</entitydescription.spar-8>
-  <entityname.spar_45magazine>SPAR-8弹匣(45)</entityname.spar_45magazine>
-  <entitydescription.spar_45magazine>45发钛合金 8×75mm 步枪弹匣，所使用狙击穿甲弹，仅适合标准型号。</entitydescription.spar_45magazine>
-  <entityname.spar_20magazine>SPAR-8弹匣(20)</entityname.spar_20magazine>
-  <entitydescription.spar_20magazine>20发钛合金 8×75mm 步枪弹匣，所使用狙击穿甲弹。</entitydescription.spar_20magazine>
+  <entityname.8_45magazine_bw>SPAR-8弹匣(45)</entityname.8_45magazine_bw>
+  <entitydescription.8_45magazine_bw>45发钛合金 8×75mm 步枪弹匣，所使用狙击穿甲弹。</entitydescription.8_45magazine_bw>
+  <entityname.8_20magazine_bw>SPAR-8弹匣(20)</entityname.8_20magazine_bw>
+  <entitydescription.8_20magazine_bw>20发钛合金 8×75mm 步枪弹匣，所使用狙击穿甲弹。</entitydescription.8_20magazine_bw>
+  <entityname.spar-76>SPAR-76 特种突击步枪</entityname.spar-76>
+  <entitydescription.spar-76>钢铁联盟设计的一款重型突击步枪，结实耐用，设计初衷为仅需几发即可瘫痪对方。</entitydescription.spar-76>
+  <entityname.76_30magazine_bw>SPAR-76弹匣(30)</entityname.76_30magazine_bw>
+  <entitydescription.76_30magazine_bw>30发 7.62×54mm 步枪弹匣，每一发都如同重锤一般。</entitydescription.76_30magazine_bw>
   <entityname.spar-65>SPAR-65 特种突击步枪</entityname.spar-65>
-  <entitydescription.spar-65>在SPAR-556A的基础上更换65mm重型枪管和优化人体工学设计</entitydescription.spar-65>
-  <entityname.spar_50magazine>SPAR-65弹鼓(50)</entityname.spar_50magazine>
-  <entitydescription.spar_50magazine>50发 6.5×52mm 步枪弹鼓，可在战术小队内充当火力压制的角色。</entitydescription.spar_50magazine>
-  <entityname.spar-556a>SPAR-556A 特种突击步枪</entityname.spar-556a>
+  <entitydescription.spar-65>在spar-556a的基础上更换65mm重型枪管和优化人体工学设计</entitydescription.spar-65>
+  <entityname.65_50magazine_bw>SPAR-65弹鼓(50)</entityname.65_50magazine_bw>
+  <entitydescription.65_50magazine_bw>50发 6.5×52mm 步枪弹鼓，可在战术小队内充当火力压制的角色。</entitydescription.65_50magazine_bw>
+  <entityname.spar-556a>spar-556a 特种突击步枪</entityname.spar-556a>
   <entitydescription.spar-556a>钢铁联盟联立初期所设计的一款突击步枪，为使用延长枪管的改进型。</entitydescription.spar-556a>
-  <entityname.spar-556>SPAR-556 特种突击步枪</entityname.spar-556>
+  <entityname.spar-556>spar-556 特种突击步枪</entityname.spar-556>
   <entitydescription.spar-556>钢铁联盟联立初期所设计的一款突击步枪，由于缺乏经验，因此参照了目前联盟内主流突击步枪所研发的枪械，但因缺乏足够的停止作用而深受诟病。</entitydescription.spar-556>
-  <entityname.spar_30magazine>SPAR-556弹匣(30)</entityname.spar_30magazine>
-  <entitydescription.spar_30magazine>30发 5.56×45mm 步枪弹匣，所使用钢芯弹。</entitydescription.spar_30magazine>
-  <entityname.spar_150magazine>SPAR-556弹鼓(150)</entityname.spar_150magazine>
-  <entitydescription.spar_150magazine>150发 5.56×45mm 步枪弹鼓，可在战术小队内充当火力压制的角色。</entitydescription.spar_150magazine>
-  <entityname.ag-300>AG-300 特种冲锋枪</entityname.ag-300>
-  <entitydescription.ag-300>为特勤战术队应对室内CQC环境所研制的亚音速冲锋枪，被联盟长钉分队审判者大量使用。</entitydescription.ag-300>
-  <entityname.ag-45>AG-45 冲锋枪</entityname.ag-45>
-  <entitydescription.ag-45>广泛用于潜艇内的防御性武器，拥有较高的停止作用以及较低的后坐力，受安保公司的喜爱。</entitydescription.ag-45>
-  <entityname.ag-50>AG-50 突击冲锋枪</entityname.ag-50>
-  <entitydescription.ag-50>使用高装药的.510弹药，难以控制的枪械，拥有极高的停止作用。</entitydescription.ag-50>
+  <entityname.556_30magazine_bw>spar-556弹匣(30)</entityname.556_30magazine_bw>
+  <entitydescription.556_30magazine_bw>30发 5.56×45mm 步枪弹匣，所使用钢芯弹。</entitydescription.556_30magazine_bw>
+  <entityname.556_150magazine_bw>spar-556弹鼓(150)</entityname.556_150magazine_bw>
+  <entitydescription.556_150magazine_bw>150发 5.56×45mm 步枪弹鼓，可在战术小队内充当火力压制的角色。</entitydescription.556_150magazine_bw>
+  <entityname.asmg-300>AG-300 特种冲锋枪</entityname.asmg-300>
+  <entitydescription.asmg-300>为特勤战术队应对室内CQC环境所研制的亚音速冲锋枪，被联盟长钉分队审判者大量使用。</entitydescription.asmg-300>
+  <entityname.300blk_24magazine_bw>AG-300弹匣(24)</entityname.300blk_24magazine_bw>
+  <entitydescription.300blk_24magazine_bw>24发 .300 BLK 冲锋枪弹匣，有着卓越的亚音速性能。</entitydescription.300blk_24magazine_bw>
+  <entityname.asmg-45>AG-45 冲锋枪</entityname.asmg-45>
+  <entitydescription.asmg-45>广泛用于潜艇内的防御性武器，拥有较高的停止作用以及较低的后坐力，受安保公司的喜爱。</entitydescription.asmg-45>
+  <entityname.45_50magazine_bw>AG-45弹匣(50)</entityname.45_50magazine_bw>
+  <entitydescription.45_50magazine_bw>50发 .45 ACP 冲锋枪弹匣，经典且可靠。</entitydescription.45_50magazine_bw>
+  <entityname.asmg-50>AG-50 突击冲锋枪</entityname.asmg-50>
+  <entitydescription.asmg-50>使用高装药的.510弹药，难以控制的枪械，拥有极高的停止作用。</entitydescription.asmg-50>
+  <entityname.50lb_16magazine_bw>AG-50弹匣(16)</entityname.50lb_16magazine_bw>
+  <entitydescription.50lb_16magazine_bw>16发 .510 LB 冲锋枪弹匣。</entitydescription.50lb_16magazine_bw>
   <entityname.spsg-15>SPSG-15 特种突击霰弹枪</entityname.spsg-15>
   <entitydescription.spsg-15>有着独特转轮式供弹机构的全自动无托霰弹枪，拥有高达15发的弹容量，使其成为室内CQB的最佳选择。</entitydescription.spsg-15>
   <entityname.spsg-4>SPSG-4 特种"重锤"霰弹枪</entityname.spsg-4>
@@ -151,6 +179,8 @@
   <entitydescription.mph_ammo_exp>爆炸就是艺术</entitydescription.mph_ammo_exp>
   <entityname.mph_ammo_exp_vt>4 英寸 "暴雷"榴弹(VT)</entityname.mph_ammo_exp_vt>
   <entitydescription.mph_ammo_exp_vt>爆炸就是艺术，使用近炸引信在目标附近引爆并产生金属风暴，对除发射者外的一切目标进行切割。</entitydescription.mph_ammo_exp_vt>
+  <entityname.mph_ammo_exp_pg>4 英寸 "暴雷"榴弹(PG)</entityname.mph_ammo_exp_pg>
+  <entitydescription.mph_ammo_exp_pg>爆炸就是艺术，使用定时引信在设定的目标位置引爆并产生金属风暴，对除发射者外的一切目标进行切割。</entitydescription.mph_ammo_exp_pg>
   <entityname.mph_ammo_breaching>4 英寸 "公牛"榴弹</entityname.mph_ammo_breaching>
   <entitydescription.mph_ammo_breaching>FBI BREACHING!!!</entitydescription.mph_ammo_breaching>
   <entityname.mph_ammo_base>4 英寸 榴弹</entityname.mph_ammo_base>
@@ -202,6 +232,8 @@
   <entitydescription.armored_miningsuit_bw3>重型军用工程机甲改装，稍微改善速度与试验型能量循环炉。</entitydescription.armored_miningsuit_bw3>
   <entityname.apollo_bw>阿波罗(Apollo)</entityname.apollo_bw>
   <entitydescription.apollo_bw>轻型战地医师机甲，可以携带大量医疗物资，在战场中快速移动，并且对药物和研究提供巨量加成。</entitydescription.apollo_bw>
+	<entityname.circe_bw>喀耳刻(Circe)</entityname.circe_bw>
+	<entitydescription.circe_bw>轻型化学战专用机甲，可以携带大量医疗物资，在战场中快速移动，并且对毒剂烧伤有绝佳抗性。</entitydescription.circe_bw>
   <entityname.armored_hardsuit_bw_med>X01战斗装甲(战斗医疗)</entityname.armored_hardsuit_bw_med>
   <entitydescription.armored_hardsuit_bw_med>为了执行多种军事任务而诞生的先进装甲，使用X01氧气电池。附加有着自动健康监控系统。</entitydescription.armored_hardsuit_bw_med>
   <entityname.pio_bw_med>先锋式改二型</entityname.pio_bw_med>
@@ -399,9 +431,11 @@
   <Afflictionname.sup4>武库支援系统</Afflictionname.sup4>
   <Afflictiondescription.sup4>攻击速度提高20%，生命值提高25%，物理伤害减免20%。</Afflictiondescription.sup4>
   <Afflictionname.Med_sys>战地医师系统</Afflictionname.Med_sys>
-  <Afflictiondescription.Med_sys>生命值提高10%，毒药效果增加50%。</Afflictiondescription.Med_sys>
+  <Afflictiondescription.Med_sys>生命值提高10%，毒药效果增加10%。</Afflictiondescription.Med_sys>
   <Afflictionname.Apollo_sys>战地医师系统</Afflictionname.Apollo_sys>
-  <Afflictiondescription.Apollo_sys>生命值提高10%，毒药效果增加100%，基因合并时无污染风险。</Afflictiondescription.Apollo_sys>
+  <Afflictiondescription.Apollo_sys>生命值提高10%，毒剂效果增加25%，基因合并时无污染风险。</Afflictiondescription.Apollo_sys>
+	<Afflictionname.Circe_sys>化学战系统</Afflictionname.Circe_sys>
+	<Afflictiondescription.Circe_sys>生命值提高10%，毒剂和火焰效果增加100%，随着时间中和体内有毒物质。</Afflictiondescription.Circe_sys>
   <Afflictionname.bedsidemanner_bw>阿波罗支援系统</Afflictionname.bedsidemanner_bw>
   <Afflictiondescription.bedsidemanner_bw>移动速度提高10%，物理伤害减免10%，生效期间不会因伤痛而死亡。</Afflictiondescription.bedsidemanner_bw>
   <entityname.railgunshellbw2>空包弹(Empty Shell)</entityname.railgunshellbw2>
@@ -521,17 +555,24 @@
   <missionmessage0.assaultonmechlabs>黑海机甲实验室已被摧毁，XOF对你很满意，现在赶在精锐部队抵达前撤离，不要留下任何痕迹。</missionmessage0.assaultonmechlabs>
   <missionsuccess.assaultonmechlabs>突袭成功</missionsuccess.assaultonmechlabs>
   <missionfailure.assaultonmechlabs>突袭失败</missionfailure.assaultonmechlabs>
-  <missionname.assaultoncoalitionstation>突袭联盟秘密站点[地狱难度]</missionname.assaultoncoalitionstation>
-  <missiondescription.assaultoncoalitionstation>摧毁位于[location1]站点，该站点配备了联盟尖盾小队，但不排除获得标枪小队的支援。</missiondescription.assaultoncoalitionstation>
-  <missionheader0.assaultoncoalitionstation>联盟秘密站点已被摧毁</missionheader0.assaultoncoalitionstation>
-  <missionmessage0.assaultoncoalitionstation>联盟秘密站点已被摧毁，据可靠消息，附近的标枪小队正前往支援。</missionmessage0.assaultoncoalitionstation>
   <missionname.assaultonseparatismstation>突袭分离主义站点[极其困难]</missionname.assaultonseparatismstation>
   <missiondescription.assaultonseparatismstation>摧毁位于[location1]站点，该站点为塞壬小队的补给站，摧毁它以切断分离主义的补给线。</missiondescription.assaultonseparatismstation>
   <missionheader0.assaultonseparatismstation>分离主义站点已被摧毁</missionheader0.assaultonseparatismstation>
   <missionmessage0.assaultonseparatismstation>补给线已经被切断。</missionmessage0.assaultonseparatismstation>
-  <missionname.assaultonstation>突袭海盗站点[极其困难]</missionname.assaultonstation>
-  <missiondescription.assaultonstation>摧毁位于[location1]站点，该站点已经被海盗占领，请肃清该站点。</missiondescription.assaultonstation>
-  <missionheader0.assaultonstation>站点已被摧毁</missionheader0.assaultonstation>
-  <missionmessage0.assaultonstation>我们的船只以后能够继续安全地通过该通道。</missionmessage0.assaultonstation>
-
+	<!--已测试，需更新-->
+	<missionname.assaultoncoalitionstation>突袭联盟秘密站点[地狱难度]</missionname.assaultoncoalitionstation><!--装备有优化空间-->
+	<missiondescription.assaultoncoalitionstation>摧毁位于[location1]站点，该站点配备了联盟尖盾小队，但不排除获得标枪小队的支援。</missiondescription.assaultoncoalitionstation>
+	<missionheader0.assaultoncoalitionstation>联盟秘密站点已被摧毁</missionheader0.assaultoncoalitionstation>
+	<missionmessage0.assaultoncoalitionstation>联盟秘密站点已被摧毁，据可靠消息，附近的标枪小队正前往支援。</missionmessage0.assaultoncoalitionstation>
+	<missionname.assaultonstation>突袭大型海盗站点[极其困难]</missionname.assaultonstation><!--太简单-->
+	<missiondescription.assaultonstation>摧毁位于[location1]站点，该站点已经被海盗占领，请肃清该站点。</missiondescription.assaultonstation>
+	<missionheader0.assaultonstation>站点已被摧毁</missionheader0.assaultonstation>
+	<missionmessage0.assaultonstation>我们的船只以后能够继续安全地通过该通道。</missionmessage0.assaultonstation>
+	<!--已验证-->
+  <missionname.purgestation_small_2>肃清小型精锐海盗站点</missionname.purgestation_small_2>
+  <missiondescription.purgestation_small_2>摧毁位于[location1]的海盗据点，该站点已经被一群武装海盗占领，请肃清该站点。 请注意，海盗拥有大量全自动步枪火力以及少量机甲与精确步枪/重火力。</missiondescription.purgestation_small_2>
+  <missionname.purgestation_small>肃清小型海盗站点</missionname.purgestation_small>
+  <missiondescription.purgestation_small>摧毁位于[location1]的海盗据点，该站点已经被一群武装海盗占领，请肃清该站点。 请注意，海盗拥有少量全自动步枪火力以及可能存在的机甲与精确步枪/重火力。 </missiondescription.purgestation_small>
+  <missionheader0.purgestation_small>据点已经被肃清</missionheader0.purgestation_small>
+  <missionmessage0.purgestation_small>我们的船只以后能够继续安全地通过该通道。</missionmessage0.purgestation_small>
 </infotexts>
